@@ -1,3 +1,9 @@
+2006-06-28  TAMUKI Shoichi <tamuki@linet.gr.jp>
+
+	* interface/mac_c.c, interface/motif_c.c, interface/vt100_c.c,
+	  interface/xaw_c.c, timidity/sndfont.c:
+	  Add struct member of ControlMode to fit with new interface
+
 2006-05-26  Eric A. Welsh <ewelsh@ccb.wustl.edu>
 
 	* timidity/timidity.c (main): The free(files[i]) loop was causing
